# ImageFliter

./: .gitignore  main.py  pyproject.toml
src/artbookfliter/: artbook_dedup.py
src/badzfliter/: __init__.py  archive_checker.py
src/badzipfliter/: __init__.py  __main__.py
src/badzipfliter/scripts/: bad_zip_tdel.py
src/batchfliter/: __main__.py  readme.md
src/common/: archive.py  archive_process.py  backup.py  path.py
src/imgfliter/: __init__.py  __main__.py
src/imgfliter/cli/: commands.py
src/imgfliter/core/: filter.py
src/imgfliter/detectors/: duplicate.py  grayscale.py  text.py
src/imgfliter/utils/: __init__.py  merge.py
src/lowwidthfliter/: __init__.py
src/nodes/hash/: hash_accelerator.py
src/nodes/pics/color/: grayscale_detector.py  pure_bw.py
src/nodes/pics/filter/: archive_merger.py  cv_text_image_cache.json  filter_config.py  group_analyzer.py  hash_process_config.py  image_filter.py  image_filter_old.py  multi_analyzer.py  ocr_cache.json  range_control.py  small_image_detector.py  test-threaded.py  test.py  watermark_detector.py
src/nodes/pics/hash/: calculate_hash_custom.py  image_clarity.py  path_uri.py
src/rawfilter/: no_translate_find.py  no_translate_find_config.json
src/recruitfilter/: __main__.py  recruit_cover_filter_config.json
src/timgfilter/: text_img_filter.py
src/widthfliter/: __init__.py  __main__.py
src/zipfliter/: archive_check_history.json
src/zipfliter/scripts/: bad_zip_tdel.py
